# battery-soh-rul-modeling

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
models/: .gitignore
models/evaluation/16_features_ExtraTreesRegressor_SOH_evaluation/: overall_metrics.json
models/evaluation/16_features_KNeighborsRegressor_RUL_evaluation/: overall_metrics.json
models/evaluation/16_features_KNeighborsRegressor_SOH_evaluation/: overall_metrics.json
models/evaluation/16_features_LGBMRegressor_RUL_evaluation/: overall_metrics.json
models/evaluation/16_features_LGBMRegressor_SOH_evaluation/: overall_metrics.json
models/evaluation/16_features_TweedieRegressor_SOH_evaluation/: overall_metrics.json
models/evaluation/4_features_ExtraTreesRegressor_RUL_evaluation/: overall_metrics.json
models/evaluation/4_features_ExtraTreesRegressor_SOH_evaluation/: overall_metrics.json
models/evaluation/4_features_KNeighborsRegressor_RUL_evaluation/: overall_metrics.json
models/evaluation/4_features_KNeighborsRegressor_SOH_evaluation/: overall_metrics.json
models/optimization/16_features_ExtraTreesRegressor_SOH_optimization/: history.csv
models/optimization/16_features_LGBMRegressor_RUL_optimization/: history.csv
models/optimization/16_features_TweedieRegressor_RUL_optimization/: history.csv
models/optimization/16_features_TweedieRegressor_SOH_optimization/: history.csv
models/optimization/4_features_ExtraTreesRegressor_RUL_optimization/: history.csv
models/optimization/4_features_ExtraTreesRegressor_SOH_optimization/: history.csv
models/optimization/4_features_KNeighborsRegressor_RUL_optimization/: history.csv
models/optimization/4_features_LGBMRegressor_SOH_optimization/: history.csv
notebooks/: test.ipynb
notebooks/data_analysis/: 20250725-gbs-cycle-signals.ipynb  20250725-gbs-features.ipynb  20250805-gbs-train-test-data.ipynb
notebooks/results_analysis/: 20250730-gbs-results-analysis.ipynb
paper/: supplementary.tex
paper/latex/: acronyms.tex  main.tex  preamble.tex
paper/latex/content/: appendix.tex  conclusion.tex  data_analysis.tex  feature_extraction.tex  optimization.tex  results_evaluation.tex  results_optimization.tex  soh_and_rul.tex
paper/latex/figures/: data_analysis_all_cell_soh.tex  data_analysis_charge_current_and_cycle_life.tex  data_analysis_charge_steps.tex  data_analysis_charge_steps_area_diff.tex  data_analysis_cycle_life_distribution.tex  data_analysis_signals_through_cycles.tex  data_analysis_temperature_and_capacities.tex  data_analysis_voltage_current_begin_and_end.tex  data_analysis_voltage_current_temperature.tex  features_extraction_correlation_heatmap.tex  features_extraction_features.tex  features_extraction_features_with_filter.tex  fig_model.tex  introduction_overall_flux.tex  models_model_diagram.tex  (+5 more)
reports/: .gitignore
reports/paper/: acronyms.tex  main.tex  preamble.tex  references.bib
results/feature_importances/: RUL.json  SOH.json
src/: functions.py
src/analysis/: utils.py
src/conf/: config.yaml
src/data/: build_data.py  load_data.py  make_features.py  prepare_data.py
src/modeling/: evaluation.py  feature_importance.py  optimization.py  utils.py
(+74 files in other folders)
